z-index fix + cleanup

--- a/client/src/components/modules/tags/EditTags.css
+++ b/client/src/components/modules/tags/EditTags.css
@@ -106,7 +106,7 @@
 .aboutTags {
   position: absolute;
   background-color: white;
-  top: 87.5vh;
+  top: 87vh;
   left: 7vw;
   height: 2.8vw;
   padding-top: 0.2vw;
