--- a/client/src/components/pages/WriteDream.css
+++ b/client/src/components/pages/WriteDream.css
@@ -121,7 +121,7 @@
 
 .toggleContainer {
   position: absolute;
-  top: 40vh;
+  top: 38vh;
   border: none;
   right: 7vw;
   background-color: white;
